source/_inc/layouts/side_drawer/style.css
    :root {
        --primary-color: #16641c;
        --primary-color-half: #16641c88;
        --accent-color: rgb(0 123 171);
    }

    body {
        margin: 0;
        padding: 0;
        font-size: 12pt!important;
        font-family: "Roboto", "Open Sans", sans-serif;
        font-weight: 400;
        position: relative;
        min-height: 100vh;
    }

    /* prevents links dragging */
    a, a::after, a::before {
        -webkit-user-drag: none;
        -webkit-app-region: no-drag;
    }
    a {
        text-decoration: none;
    }

    strong {
        font-weight: 600;
    }

    h1 {
        font-size: 195%;
        font-weight: 600!important;
    }
    h1.title {
        margin:0;
        padding-right: 48px;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        text-align: center;
        color: var(--primary-color);
    }
    h2 {
        font-size: 175%;
        margin-top: 56px;
        font-weight: 600;
    }
    h3 {
        margin-top: 42px;
        font-size: 160%;
        font-weight: 600;
        color: #4c7498;
    }
    label {
        color: #366495;
        font-size: 12pt;
        text-transform: uppercase;
        font-weight: 600;
        margin-top: 24px;
        display: block;
    }

    main .content ul {
        padding-left: 20px;
    }
    li {
        font-weight: 400;
        line-height: 175%;
        font-size: 105%;
        min-height: 32px;
    }
    li small {
        color: dimgray;
        /*    opacity: 0.5;*/
    }

    blockquote {
        font-size: 140%;
        opacity: 0.6;
    }

    p {
        font-size: 130%;
        font-weight: 400;
        line-height: 170%;
        margin-bottom: 24px;
    }

    hr {
        margin-bottom: 30px;
        padding: 4px;
        margin: 0;
    }

    th {
        border: 1px solid rgba(100,100,100, 0.5);
    }
    td:not(:first-child) {
        border-left: 1px solid rgba(100,100,100, 0.5);
        padding: 4px;
    }
    td code {
        white-space: nowrap;
    }

    .example-container {
        margin-top: 48px;
        margin-bottom: 48px;
        min-height: 48px;
    }

    code[class*=language-], pre[class*=language-] {
        font-size: 100%;
    }
    pre:not([class*="language-"]) {
        width: 100%;
        max-width: 100%;
        overflow-x: auto;
    }

    pre[class*="language-"]{
        margin-top: 32px!important;
        margin-bottom: 32px!important;
    }
    code {
        color: #0b753f;
        font-size: 115%;
        font-weight: 400;
        margin-left: 2px;
        margin-right: 2px;
        overflow-wrap: break-word; /* for old browsers */
        overflow-wrap: anywhere;
    }
    code.option {
        font-size: 80%;
        padding: 4px;
        border-radius: 6px;
        border: solid 1px rgba(0,200,0,0.25);
        background: rgba(255,255,255,0.15);
    }
    p code {
        font-size: 90%;
    }
    a code {
        color: var(--accent-color);
        font-weight: 600;
    }
    table {
        /*margin-left: auto;
        margin-right: auto;*/
        border: 1px solid rgba(0,0,0,0.2);
    }

    /* prevents links dragging */
    a, a::after, a::before {
        -webkit-user-drag: none;
        -webkit-app-region: no-drag;
    }

    main {
        width: 100% !important;
        padding: 0 !important;
        transition: padding-left 150ms ease-in-out;
    }
    main div.content {
        width: 100% !important;
        max-width: 960px !important;
        padding-left: 12px !important;
        padding-right: 12px !important;
    }
    main h2  {
        margin-top: 56px;
    }
    main .content h2:first-child {
        margin-top: 24px;
    }
    main h3 {
        margin-top: 56px;
        margin-bottom: 16px;
    }
    div.content > p {
        font-size: 110% !important;
        line-height: 170% !important;
        margin: 24px 0 24px;
    }
    [\#header] {
        position: fixed;
        z-index: 100;
        top:0; left: 0; right: 0; bottom: 0;
        height: 64px;
        padding-left: 8px;
        padding-right: 8px;
        background: #f1f1f1;
        box-shadow: 0 1px rgba(100, 100, 100, 30%);
    }
    h1[\#alt_header] {
        max-width: 100%;
        text-align: center;
        display: block;
        padding: 0 !important;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        font-weight: 600;
        margin: 24px;
    }

    .header-menu-button {
        cursor: pointer;
        height: 48px!important;
        width: 48px!important;
    }
    .header-menu-button i {
        color: black;
        font-size: 32px!important;
        left: 20px!important;
    }

    .margin-8px {
        margin: 8px;
    }
    .margin-10px {
        margin: 10px;
    }
    .margin-16px {
        margin: 16px;
    }
    .no-select {
        -webkit-touch-callout: none; /* iOS Safari */
        -webkit-user-select: none; /* Safari */
        -khtml-user-select: none; /* Konqueror HTML */
        -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
        user-select: none; /* Non-prefixed version, currently
                                      supported by Chrome, Edge, Opera and Firefox */
    }
    @media screen and (min-width: 1280px) {
        main {
            padding-top: 0 !important;
            padding-left: 304px !important;
            padding-right: 24px !important;
        }
        .sponsorship {
            margin-left: 280px;
        }
        [\#header] {
            padding-left: 316px;
            display: none;
        }
        h1[\#alt_header] {
            margin-top: 32px;
            margin-bottom: 48px;
            /*margin-left: -28px;*/
            visibility: visible;
        }
        .header-menu-button {
            display: none;
        }
        footer {
            margin-left: 280px;
        }
    }

    /* UI state classes */
    .not-ready {
        opacity: 0.5;
        -webkit-animation: pulse .5s infinite ease-in-out;
        -o-animation: pulse .5s infinite ease-in-out;
        -ms-animation: pulse .5s infinite ease-in-out;
        -moz-animation: pulse .5s infinite ease-in-out;
        animation: pulse .5s infinite ease-in-out;
    }
    @-webkit-keyframes pulse {
        0% { opacity: 0.2; }
        50% { opacity: 0.4; }
        100% { opacity: 0.2; }
    }
    @keyframes pulse {
        0% { opacity: 0.2; }
        50% { opacity: 0.4; }
        100% { opacity: 0.2; }
    }

    .mdl-tabs__panel pre {
        margin-top: 0!important;
    }
    .mdl-tabs__tab-bar {
        justify-content: left!important;
    }

    [z-load="@lib/templates/mdl-card-image"] {
        position: relative;
        width: 256px;
        height: 256px;
    }
    {% include 'layouts/side_drawer/drawer.css' %}

